主页基本完成

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,8 @@
 
     <div class="nav">
         <div></div>
-        <div>欢迎购买</div>
+        <div>欢迎购物 >></div>
         <div style="flex-grow: 1;"></div>
-        <div>我的订单</div>
         <div>购物车</div>
         <div class="btn1">登录</div>
         <div class="btn2">注册</div>
@@ -36,7 +35,7 @@
                 <span>京东超市</span>
                 <span>京东金融</span>
                 <span>限时秒杀</span>
-                <span>会员</span> 
+                <span>会员</span>
             </div>
         </div>
         <div class="logo2"></div>
@@ -61,22 +60,15 @@
         <div class="advt"></div>
         <div class="rank">
             <div>今日热销</div>
-            <div class="rank1"></div> 
-            <div class="rank2"></div> 
-            <div class="rank3"></div> 
+            <div class="rank1"></div>
+            <div class="rank2"></div>
+            <div class="rank3"></div>
         </div>
     </div>
-  
-    <div class="goods">
-        <div>goods1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-    </div>
+
+    <div class="title">- 精选好物 -</div>
+
+    <div id="goods-list"></div>
 
     <div class="footer">
         <div>关于我们</div>
