--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +13,9 @@
         <div></div>
         <div>欢迎购物 >></div>
         <div style="flex-grow: 1;"></div>
-        <div>购物车</div>
-        <div class="btn1">登录</div>
-        <div class="btn2">注册</div>
+        <div id="shopping-cart">购物车</div>
+        <div id="login-btn">登录</div>
+        <div id="register-btn">注册</div>
         <div></div>
     </div>
 
