--- a/public/shopcart.html
+++ b/public/shopcart.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>购物车</title>
     <link rel="stylesheet" href="../src/style.css">
+    <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="nav">
         <div></div>
         <div>欢迎添加到购物车 >></div>
         <div style="flex-grow: 1;"></div>
-        <div>京东首页</div>
-        <div class="btn1">登录</div>
-        <div class="btn2">注册</div>
+        <div id="index-btn">京东首页</div>
+        <div id="login-btn">登录</div>
+        <div id="register-btn">注册</div>
         <div></div>
     </div>
 
