--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +23,9 @@
     <div class="header">
         <div class="logo1"></div>
         <div>
-            <div class="search">
-                <input type="text" class="search-input" placeholder="请输入商品名称">
-                <button class="search-btn">搜 索</button>
+            <div id="search">
+                <input type="text" id="search-input" placeholder="请输入商品名称">
+                <button id="search-btn">搜 索</button>
             </div>
             <div class="recommend">
                 <span>为您推荐:</span>
