--- a/public/shopcart.html
+++ b/public/shopcart.html
@@ -23,9 +23,9 @@
     <div class="header">
         <div class="logo1"></div>
         <div>
-            <div class="search">
-                <input type="text" class="search-input" placeholder="请输入添加到购物车的商品名称">
-                <button class="search-btn">搜 索</button>
+            <div id="search">
+                <input type="text" id="search-input" placeholder="请输入添加到购物车的商品名称">
+                <button id="search-btn">搜 索</button>
             </div>
             <div class="recommend">
                 <span>为您推荐:</span>
