搜索结果界面

--- a/public/search.html
+++ b/public/search.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>购物车</title>
+    <title>搜索结果</title>
     <link rel="stylesheet" href="../src/style.css">
 </head>
 
 <body>
     <div class="nav">
         <div></div>
-        <div>欢迎添加到购物车 >></div>
+        <div>搜索结果 >></div>
         <div style="flex-grow: 1;"></div>
         <div id="index-btn">京东首页</div>
+        <div id="shopping-cart">购物车</div>
         <div id="login-btn">登录</div>
         <div id="register-btn">注册</div>
         <div></div>
@@ -23,17 +24,17 @@
         <div class="logo1"></div>
         <div>
             <div id="search">
-                <input type="text" id="search-input" placeholder="请输入添加到购物车的商品名称">
+                <input type="text" id="search-input" placeholder="">
                 <button id="search-btn">搜 索</button>
             </div>
             <div class="recommend">
                 <span>为您推荐:</span>
                 <span>华为蓝牙耳机</span>
-                <span>小米手机</span>
-                <span>OPPO手机壳</span>
-                <span>耐克鞋子</span>
-                <span>精美小礼品</span>
-                <span>笔记本电脑</span>
+                <span>ccd数码相机</span>
+                <span>小米电脑包</span>
+                <span>简约小椅子</span>
+                <span>狼蛛F98Pro</span>
+                <span>自带线充电宝</span>
             </div>
         </div>
         <div class="logo2"></div>
