--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-
     <div class="nav">
         <div></div>
         <div>欢迎购物 >></div>
         <div style="flex-grow: 1;"></div>
+        <div id="index-btn">京东首页</div>
         <div id="shopping-cart">购物车</div>
         <div id="login-btn">登录</div>
         <div id="register-btn">注册</div>
