--- a/public/login.html
+++ b/public/login.html
@@ -5,11 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录</title>
-    <link rel="stylesheet" href="../src/style.css">
 </head>
 
 <body>
+    <div class="nav">
+        <div></div>
+        <div>欢迎登录 >></div>
+        <div style="flex-grow: 1;"></div>
+        <div id="index-btn">京东首页</div>
+        <div id="shopping-cart">购物车</div>
+        <div id="login-btn">登录</div>
+        <div id="register-btn">注册</div>
+        <div></div>
+    </div>
 
+    <div class="header">
+        <div class="logo1"></div>
+        <div>
+            <div id="search">
+                <input type="text" id="search-input" placeholder="请输入商品名称">
+                <button id="search-btn">搜 索</button>
+            </div>
+            <div class="recommend">
+                <span>为您推荐:</span>
+                <span>618活动满减</span>
+                <span>疯狂星期六</span>
+                <span>京东家电</span>
+                <span>京东超市</span>
+                <span>京东金融</span>
+                <span>限时秒杀</span>
+                <span>会员</span>
+            </div>
+        </div>
+        <div class="logo2"></div>
+    </div>
 </body>
 
 </html>
