--- a/public/shopcart.html
+++ b/public/shopcart.html
@@ -39,8 +39,8 @@
     </div>
 
     <div class="cart">
-        <div class="cartitle">    
-            <div class="cart-pic" >
+        <div class="cartitle">
+            <div class="cart-pic">
                 <img src="./pic/cart.png" alt="">
             </div>
             <div>我的购物车</div>
@@ -49,6 +49,7 @@
             <thead>
                 <tr>
                     <th class="checkbox-cell"><input type="checkbox" id="select-all"></th>
+                    <th class="pic-cell">商品图片</th>
                     <th class="name-cell">商品名称</th>
                     <th class="intro-cell">商品信息</th>
                     <th class="price-cell">单价</th>
@@ -57,40 +58,26 @@
                     <th class="action-cell">操作</th>
                 </tr>
             </thead>
-            <tbody>
-                <!-- 商品列表 -->
-                
+            <tbody id="cart-body">
                 <tr>
                     <td><input type="checkbox" class="item-checkbox"></td>
-                    <td>商品1</td>
-                    <td>好吃，值得推荐</td>
-                    <td>$100</td>
+                    <td><img src="./pic/1.png" alt=""></td>
+                    <td>华为蓝牙耳机</td>
+                    <td>华为出品，高品质音质</td>
+                    <td class="price">￥289.00</td>
                     <td><input type="number" value="1" class="quantity-input"></td>
-                    <td>$100</td>
-                    <td><button class="delete-btn">移除</button></td>
-                </tr>
-                <tr>
-                    <td><input type="checkbox" class="item-checkbox"></td>
-                    <td>商品2</td>
-                    <td>好吃，值得推荐</td>
-                    <td>$150</td>
-                    <td><input type="number" value="1" class="quantity-input"></td>
-                    <td>$150</td>
-                    <td><button class="delete-btn">移除</button></td>
-                </tr>
-                <tr>
-                    <td><input type="checkbox" class="item-checkbox"></td>
-                    <td>商品3</td>
-                    <td>好吃，值得推荐</td>
-                    <td>$150</td>
-                    <td><input type="number" value="1" class="quantity-input"></td>
-                    <td>$150</td>
+                    <td class="total-price">￥289.00</td>
                     <td><button class="delete-btn">移除</button></td>
                 </tr>
             </tbody>
         </table>
+
         <div class="summary">
-            <!-- 总价和结算按钮 -->
+            <div class="total">
+                <span>总价:</span>
+                <span class="total-price">$250</span>
+            </div>
+            <button class="checkout-btn">结算</button>
         </div>
     </div>
 </body>
