--- a/public/detail.html
+++ b/public/detail.html
@@ -39,10 +39,10 @@
         <div class="logo2"></div>
     </div>
 
-    <div class="main">
-
+    <div class="detail">
+        <img src="./pic/detail.png" alt="">
     </div>
-    
+
 </body>
 
 </html>
