按钮跳转事件修改

--- a/public/shopcart.html
+++ b/public/shopcart.html
@@ -12,9 +12,9 @@
         <div></div>
         <div>欢迎添加到购物车 >></div>
         <div style="flex-grow: 1;"></div>
-        <div id="index-btn">京东首页</div>
-        <div id="login-btn">登录</div>
-        <div id="register-btn">注册</div>
+        <div id="index-btn" onclick="location.href='index.html'">京东首页</div>
+        <div id="login-btn" onclick="location.href='login.html'">登录</div>
+        <div id="register-btn" onclick="location.href='register.html'">注册</div>
         <div></div>
     </div>
 
@@ -23,7 +23,7 @@
         <div>
             <div id="search">
                 <input type="text" id="search-input" placeholder="请输入添加到购物车的商品名称">
-                <button id="search-btn">搜 索</button>
+                <button id="search-btn" onclick="location.href='search.html'">搜 索</button>
             </div>
             <div class="recommend">
                 <span>为您推荐:</span>
