搜索功能完善

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div>
             <div id="search">
                 <input type="text" id="search-input" placeholder="请输入商品名称">
-                <button id="search-btn" onclick="location.href='search.html'">搜 索</button>
+                <button id="search-btn" onclick="search()">搜 索</button>
             </div>
             <div class="recommend">
                 <span>为您推荐:</span>
