--- a/public/shopcart.html
+++ b/public/shopcart.html
@@ -23,7 +23,7 @@
         <div>
             <div id="search">
                 <input type="text" id="search-input" placeholder="请输入添加到购物车的商品名称">
-                <button id="search-btn" onclick="location.href='search.html'">搜 索</button>
+                <button id="search-btn" onclick="search()">搜 索</button>
             </div>
             <div class="recommend">
                 <span>为您推荐:</span>
@@ -45,6 +45,7 @@
             </div>
             <div>我的购物车</div>
         </div>
+
         <table>
             <thead>
                 <tr>
@@ -63,9 +64,13 @@
                     <td><input type="checkbox" class="item-checkbox"></td>
                     <td><img src="./pic/1.png" alt=""></td>
                     <td>华为蓝牙耳机</td>
-                    <td>华为出品，高品质音质</td>
+                    <td>华为出品，享受高品质音质</td>
                     <td class="price">￥289.00</td>
-                    <td><input type="number" value="1" class="quantity-input"></td>
+                    <td class="quantity">
+                        <button id="decrease">-</button>
+                        <input type="number" id="countInput" value="1">
+                        <button id="increase">+</button>
+                    </td>
                     <td class="total-price">￥289.00</td>
                     <td><button class="delete-btn">移除</button></td>
                 </tr>
@@ -75,11 +80,12 @@
         <div class="summary">
             <div class="total">
                 <span>总价:</span>
-                <span class="total-price">$250</span>
+                <span class="total-price"></span>
             </div>
             <button class="checkout-btn">结算</button>
         </div>
     </div>
+
 </body>
 
 </html>
