--- a/public/detail.html
+++ b/public/detail.html
@@ -39,8 +39,12 @@
         <div class="logo2"></div>
     </div>
 
-    <div class="detail">
-        <img src="./pic/detail.png" alt="">
+    <div id="detail">
+        <div id="product-detail"></div>
+        <div class="buttons">
+            <button id="back-to-home">返回首页</button>
+            <button id="add-to-cart">加入购物车</button>
+        </div>
     </div>
 
 </body>
